--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "discord-api-types": "^0.38.36",
+    "discord-interactions": "^4.4.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
