--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "register": "tsx ./scripts/register-commands.ts"
   },
   "dependencies": {
+    "@prisma/client": "^7.1.0",
     "discord-api-types": "^0.38.36",
     "discord-interactions": "^4.4.0",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -24,6 +26,7 @@
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "typescript": "^5"
