--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "register": "tsx ./scripts/register-commands.ts"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "discord-api-types": "^0.38.36",
     "discord-interactions": "^4.4.0",
     "next": "16.0.7",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tweetnacl": "^1.0.3"
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.3",
